--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <title>CodeHills</title>
   </head>
-  <body>
+  <body class="dark:text-gray-50 dark:bg-gray-900">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
