feat: update dashboard layout

--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
     />
     <title>CodeHills</title>
   </head>
-  <body class="dark:text-gray-50 dark:bg-gray-900">
-    <div id="root"></div>
+  <body
+    class="bg-brand-blue-light/70 dark:text-gray-50 dark:bg-gray-900 text-sm"
+  >
+    <div
+      id="root"
+      class="w-full flex flex-col overflow-x-hidden min-h-screen"
+    ></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
