feat: update page titles and meta descriptions

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>CodeHills</title>
+    <meta name="description" content="CodeHills" />
+    <meta name="keywords" content="CodeHills, HR App, Developers, Project reviews, Review Cyle" />
   </head>
   <body
     class="bg-brand-blue-light/70 dark:text-gray-50 dark:bg-gray-900 text-sm"
